--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_xml_plugin_file.html
@@ -20,8 +20,8 @@
     <#list plugin.features as feature >
         <admin-feature>
             <feature-id>${feature.pluginFeatureRight}</feature-id>
-            <feature-title>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName?lower_case}.name</feature-title>
-            <feature-description>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName?lower_case}.description</feature-description>
+            <feature-title>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName}.name</feature-title>
+            <feature-description>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName}.description</feature-description>
             <feature-level>${feature.pluginFeatureLevel}</feature-level>
             <feature-url>jsp/admin/plugins/${plugin.pluginName}/${feature.jspName}</feature-url>
             <feature-icon-url></feature-icon-url>
