--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
@@ -18,7 +18,7 @@
                 <input type="hidden" name="page" value="pluginwizard" />                     
                 <input type="hidden" name="action" value="do_modify_feature" />                     
                 <input type="hidden" name="plugin_id" value="${plugin_id}" />                        
-                <input type="hidden" name="feature_id" value="${feature.Publish}" />   
+                <input type="hidden" name="feature_id" value="${feature.id}" />   
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureTitle} : </label>                           
