PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50442 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
@@ -44,7 +44,7 @@ public class ${business_class.businessClass}
 	// Variables declarations 
 	<#list business_class.attributes as attribute>
            <#if attribute.type == "String" > 
-             <#if attribute.couldNotBeEmpty >
+             <#if attribute.notNull >
         @NotEmpty( message = "@i18n{${plugin_name}.validation.${business_class.businessClass?lower_case}.${attribute.name}.notEmpty}" )
              </#if>
              <#if attribute.maxLength &gt; 0 > 
