--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
@@ -36,34 +36,24 @@
                 </div>
 
                 <div class="control-group">
-                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeKey} * : </label>                            
-                    <div class="controls">                                                                                                      
-                        <select class="input-small" name="primary_key">  
-                            <#if attribute.isPrimary>
-                            <option value="0" >#i18n{portal.util.labelNo}</option>    				                              
-                            <option value="1" selected>#i18n{portal.util.labelYes}</option>
-                            <#else>                            
-                            <option value="0" selected >#i18n{portal.util.labelNo}</option>    				                              
-                            <option value="1">#i18n{portal.util.labelYes}</option> 
-                            </#if>
-                        </select>                
-                    </div> 
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelMandatory} * : </label>                            
+                    <div class="controls">  
+                        <input class="checkbox" type="checkbox" name="mandatory" value="1" <#if attribute.notNull>checked="checked"</#if>  />
+                    </div>  
                 </div>
 
                 <div class="control-group">
-                    <label class="control-label">Description * :                        
-                    </label>                            
-                    <div class="controls">                                                                                                     
-                        <select class="input-small" name="class_description">    
-                            <#if attribute.isDescription >
-                            <option value="0">#i18n{portal.util.labelNo}</option>
-                            <option value="1" selected>#i18n{portal.util.labelYes}</option>
-                            <#else>
-                            <option value="0" selected>#i18n{portal.util.labelNo}</option>
-                            <option value="1" >#i18n{portal.util.labelYes}</option>
-                            </#if>
-                        </select>                
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeKey} * : </label>                            
+                    <div class="controls">  
+                        <input class="checkbox" type="checkbox" name="primary_key" <#if attribute.isPrimary>checked="checked"</#if> />
                     </div>  
+                </div>
+
+                <div class="control-group">
+                    <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelClassDescription} * : </label>                            
+                    <div class="controls">                                                                                                     
+                        <input class="checkbox" type="checkbox" name="class_description" <#if attribute.isDescription>checked="checked"</#if> />
+                    </div>                         
                 </div>
 
                 <div class="form-actions">                                          
