--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -86,7 +86,7 @@
                     <td>${attribute.attributeName}</td>
                     <td>${attribute.type}</td>
                     <td>
-                        <#if attribute.couldNotBeEmpty>
+                        <#if attribute.notNull>
                         <span class="label"><i class="icon-ok icon-white"></span>
                         </#if>
                     </td>
