--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
@@ -45,11 +45,13 @@ public class ${business_class.businessClass}
 	<#list business_class.attributes as attribute>
            <#if attribute.type == "String" > 
              <#if attribute.notNull >
-        @NotEmpty( message = "@i18n{${plugin_name}.validation.${business_class.businessClass?lower_case}.${attribute.name}.notEmpty}" )
+        // @NotEmpty( message = "@i18n{${plugin_name}.validation.${business_class.businessClass?lower_case}.${attribute.name}.notEmpty}" )
+        @NotEmpty( message = "@i18n{portal.validation.message.notEmpty}" )
              </#if>
              <#if attribute.maxLength &gt; 0 > 
-        @Size( max = ${attribute.maxLength} , message = "@i18n{${plugin_name}.validation.${business_class.businessClass?lower_case}.${attribute.name}.size}" ) 
-             </#if>
+        // @Size( max = ${attribute.maxLength} , message = "@i18n{${plugin_name}.validation.${business_class.businessClass?lower_case}.${attribute.name}.size}" ) 
+        @Size( max = ${attribute.maxLength} , message = "@i18n{portal.validation.message.sizeMax}" ) 
+            </#if>
             </#if>
 	private ${attribute.type} _${attribute.variableName};
 	</#list>
