--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_admin_alternative.html
@@ -40,21 +40,22 @@ import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_cl
 import fr.paris.lutece.portal.service.message.AdminMessage;
 import fr.paris.lutece.portal.service.message.AdminMessageService;
 import fr.paris.lutece.portal.service.util.AppPropertiesService;
+import fr.paris.lutece.portal.service.template.AppTemplateService;
 import fr.paris.lutece.portal.web.constants.Messages;
 import fr.paris.lutece.portal.web.util.LocalizedPaginator;
+import fr.paris.lutece.util.beanvalidation.ValidationError;
+import fr.paris.lutece.util.html.HtmlTemplate;
 import fr.paris.lutece.util.html.Paginator;
 import fr.paris.lutece.util.url.UrlItem;
-import fr.paris.lutece.portal.service.template.AppTemplateService;
-import fr.paris.lutece.util.html.HtmlTemplate;
 
 import java.util.HashMap;
 
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+
 
 import javax.servlet.http.HttpServletRequest;
-import javax.validation.ConstraintViolation;
+
 
 /**
  * This class provides the user interface to manage ${business_class.businessClass} features ( manage, create, modify, remove )
@@ -96,6 +97,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
     private static final String MESSAGE_CONFIRM_REMOVE_${business_class.businessClass?upper_case} = "${plugin_model.pluginName}.message.confirmRemove${business_class.businessClass?cap_first}";
     private static final String PROPERTY_DEFAULT_LIST_${business_class.businessClass?upper_case}_PER_PAGE = "${plugin_model.pluginName}.list${business_class.businessClass?cap_first}s.itemsPerPage";
  
+    private static final String PREFIX_FIELDS = "${plugin_model.pluginName}.model.entity.${business_class.businessClass?lower_case}.fields.";
 
     /**
      * Returns the list of ${business_class.businessClass?lower_case}
@@ -159,9 +161,9 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
         populate( ${business_class.businessClass?lower_case}, request );
 
         // Check constraints
-        Set<ConstraintViolation<${business_class.businessClass?cap_first}>> errors = validate( ${business_class.businessClass?lower_case} );
+        List<ValidationError> errors = validate( ${business_class.businessClass?lower_case} , PREFIX_FIELDS );
 
-        if ( errors.size(  ) > 0 )
+        if (errors.size() > 0)
         {
             return AdminMessageService.getMessageUrl( request, Messages.MESSAGE_INVALID_ENTRY, errors );
         }
@@ -232,11 +234,11 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
       populate( ${business_class.businessClass?lower_case}, request );
 
       // Check constraints
-      Set<ConstraintViolation<${business_class.businessClass?cap_first}>> errors = validate( ${business_class.businessClass?lower_case} );
+      List<ValidationError> errors = validate( ${business_class.businessClass?lower_case} , PREFIX_FIELDS );
 
-      if ( errors.size(  ) > 0 )
+      if (errors.size() > 0)
       {
-          return AdminMessageService.getMessageUrl( request, Messages.MANDATORY_FIELDS, AdminMessage.TYPE_STOP );
+          return AdminMessageService.getMessageUrl( request, Messages.MESSAGE_INVALID_ENTRY, errors );
       }
 
       ${business_class.businessClass?cap_first}Home.update( ${business_class.businessClass?lower_case} );
