--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
@@ -35,6 +35,8 @@ package fr.paris.lutece.plugins.${plugin_name}.business;
 
 import javax.validation.constraints.Size;
 import org.hibernate.validator.constraints.NotEmpty;
+import org.hibernate.validator.constraints.Email;
+
 
 /**
  * This is the business class for the object ${business_class.businessClass}
@@ -53,6 +55,7 @@ public class ${business_class.businessClass}
         @Size( max = ${attribute.maxLength} , message = "@i18n{portal.validation.message.sizeMax}" ) 
             </#if>
             </#if>
+        ${attribute.constraint!}
 	private ${attribute.type} _${attribute.variableName};
 	</#list>
   <#if business_class.attributes??>
