PLUGINWIZARD-40 : Building several generation scheme - New field URL added
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50625 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
@@ -33,9 +33,8 @@
  */ 
 package fr.paris.lutece.plugins.${plugin_name}.business;
 
-import javax.validation.constraints.Size;
-import org.hibernate.validator.constraints.NotEmpty;
-import org.hibernate.validator.constraints.Email;
+import javax.validation.constraints.*;
+import org.hibernate.validator.constraints.*;
 
 
 /**
