PLUGINWIZARD-47 : New generator for site documentation
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50732 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_site_xdoc.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_site_xdoc.html
@@ -109,6 +109,12 @@
 </document>
 <#break>
 
+<#case 4>
+<#case 5>
+Put your images in this directory and then you can insert them in your xdoc with the code :  <img src="images/myimage.png" />
+<#break>
+
+
 <#default>
 </#switch>  
 
