PLUGINWIZARD-48 : Use of high level datatypes for attributes
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50765 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -84,7 +84,7 @@
                 <#list business_class.attributes as attribute>
                 <tr>
                     <td>${attribute.attributeName}</td>
-                    <td>${attribute.type}</td>
+                    <td>${attribute.typeDescription}</td>
                     <td>
                         <#if attribute.notNull>
                         <span class="label"><i class="icon-ok icon-white"></span>
