--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
@@ -61,16 +61,13 @@
         </table>
 
         <div class="form-actions"> 
-            <form method="post" name="generate"	action="jsp/site/Portal.jsp"><input
-                    type="hidden" name="page" value="pluginwizard" /> <input type="hidden"
-                    name="action" value="manage_plugin_applications" /> <input
-                    type="hidden" name="plugin_id" value="${plugin_id}" />
-
-                <button type="submit" name="goToManageAdminFeatures" class="btn btn-primary">
+            <form method="post" action="jsp/site/Portal.jsp">
+                <input type="hidden" name="page" value="pluginwizard" /> 
+                <button type="submit" name="action_businessClassesPrevious" class="btn btn-primary">
                     <i class="icon-chevron-left icon-white"></i>
                     #i18n{pluginwizard.pluginwizard_manage_business_classes.buttonBack}
                 </button>
-                <button type="submit" name="goToManagePluginApplications" class="btn btn-primary">
+                <button type="submit" name="action_businessClassesNext" class="btn btn-primary">
                     #i18n{pluginwizard.pluginwizard_manage_business_classes.buttonNext}
                     <i class="icon-chevron-right icon-white"></i>
                 </button>
